--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -19,17 +19,31 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--客户端-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.3.4.RELEASE</version>
         </dependency>
+        <!-- hystrix 熔断-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
 
-        <!--已支持 hystrix 熔断-->
+        <!--熔断器仪表盘-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
-            <version>1.3.0.RELEASE</version>
+            <version>1.4.2.RELEASE</version>
         </dependency>
 
         <!--使用 Apache的 httpclient 代替 Feign 使用 jdk 自带的 URLConnection 作为 http的默认链接-->
