--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -88,35 +88,25 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-        <!--增加 shiro 相关依赖 已包括所有的相关依赖 -->
-<!--        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring-boot-starter</artifactId>
-            <version>1.4.0</version>
-        </dependency>
-
+        <!--引入Shiro的相关引用-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>1.3.2</version>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
         </dependency>
-
+        <!--shiro 缓存-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-ehcache</artifactId>
-            <version>1.3.2</version>
+            <version>1.4.0</version>
         </dependency>
 
+        <!--登录时 需要引入 验证密码的操作-->
         <dependency>
-            <groupId>com.github.panchitoboy</groupId>
-            <artifactId>shiro-jwt</artifactId>
-            <version>1.3.0</version>
-        </dependency>-->
-        <!--<dependency>
             <groupId>com.springboot.test</groupId>
             <artifactId>test-auth-token</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -135,14 +125,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-
-
-        <!--<dependency>
-            <groupId>com.springboot.test</groupId>
-            <artifactId>test-auth-token</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
-
     </dependencies>
     <profiles>
         <profile>
