修改一些配置

--- a/test-auth-token/src/main/resources/application.yml
+++ b/test-auth-token/src/main/resources/application.yml
@@ -6,8 +6,10 @@ spring:
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
-    lease-expiration-duration-in-seconds: 30
+    lease-expiration-duration-in-seconds: 60
   client:
+    healthcheck:
+      enabled: true
     register-with-eureka: true
     fetch-registry: true
     registry-fetch-interval-seconds: 30
@@ -15,13 +17,17 @@ eureka:
       defaultZone: http://testService:123aaa@127.0.0.1:9888/eureka/,http://testService:123aaa@127.0.0.1:9999/eureka/
 endpoints:
   enabled: true
+  health:
+    enabled: true
+  actuator:
+    enabled: true
 feign:
   hystrix:
     enable: true
   compression:
     request:
       enable: true
-      mime-types: application/json,text/html,application/xml
+      mime-types: application/json
       min-request-size: 2048
     response:
       enable: true
