--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>test-kafka</module>
         <module>test-eureka-web</module>
         <module>test-auth-token</module>
+        <module>test-auth-token-client</module>
     </modules>
 
 
