--- a/test-auth-token/pom.xml
+++ b/test-auth-token/pom.xml
@@ -33,6 +33,28 @@
             <version>1.3.0.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zuul</artifactId>
+            <version>1.4.2.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -47,12 +69,18 @@
             <version>0.7.0</version>
         </dependency>
 
-        <!--需要查询数据库 获取数据-->
         <dependency>
+            <groupId>com.springboot.test</groupId>
+            <artifactId>test-auth-token-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--需要查询数据库 获取数据-->
+       <!-- <dependency>
             <groupId>com.springboot.test</groupId>
             <artifactId>test-eureka-client-test</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
