--- a/test-eureka-client/src/main/resources/application.yml
+++ b/test-eureka-client/src/main/resources/application.yml
@@ -4,30 +4,12 @@ spring:
   application:
     name: test-eureka-client
   profiles:
-    active: "@profileActive@"
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/rxk?serverTimezone=UTC&characterEncoding=UTF-8
-    username: helloworld
-    password: 1234567890
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    filters: stat,wall,slf4j
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-    type: com.alibaba.druid.pool.DruidDataSource
+    active: dev
+
 mybatis:
   mapper-locations: classpath*:com/test/eureka/web/client/**/dao/**/*Mapper.xml  # 不能有空格
   config-location: classpath:mybatis-config.xml
+
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10
