--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -67,9 +67,11 @@
 
         <dependency>
             <groupId>com.springboot.test</groupId>
-            <artifactId>test-eureka-client-test</artifactId>
+            <artifactId>test-eureka-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>io.springfox</groupId>
@@ -86,6 +88,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!--加入Redis的配置依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
 
         <!--引入Shiro的相关引用-->
@@ -117,6 +126,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+
+        <!--引入数据库相关依赖-->
+       <!-- <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>-->
     </dependencies>
     <profiles>
         <profile>
@@ -125,9 +151,6 @@
                 <profileActive></profileActive>
                 <assemblyPath>local</assemblyPath>
             </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
         </profile>
         <profile>
             <id>dev</id>
@@ -135,6 +158,9 @@
                 <profileActive>dev</profileActive>
                 <assemblyPath>dev</assemblyPath>
             </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
         </profile>
     </profiles>
     <build>
